<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_animation" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/profile_back"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/top_view"
                android:elevation="-1dp"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/guni_logo"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:src="@drawable/guni_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:background="@color/lightBackground"
                android:clickable="true"
                android:contentDescription="@string/image"
                android:focusable="true"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_round_person_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guni_logo"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                app:strokeColor="#2D89EF"
                app:strokeWidth="2dp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/student_name"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />

            <TextView
                android:id="@+id/tv_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/class_lab"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintTop_toBottomOf="@+id/tv_class">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_take_attendance"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintWidth_percent="0.5">

                        <View
                            android:id="@+id/iv_calendar"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/calendar"
                            android:backgroundTint="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.4" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/take_attendance"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/iv_calendar" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_take_other_attendance"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:visibility="invisible"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintWidth_percent="0.5">

                        <EditText
                            android:id="@+id/et_enrol"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enrolment_number"
                            android:inputType="number"
                            android:maxLength="11"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.3" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_take_other_attendance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/button_background"
                            android:text="@string/take_attendance"
                            android:textAllCaps="false"
                            app:layout_constraintTop_toBottomOf="@id/et_enrol" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintWidth_percent="0.5">

                        <TextView
                            android:id="@+id/tv_take_other_attendance"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:text="@string/want_to_attendance_for_someone_else"
                            android:textSize="18sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_go_back"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:text="@string/take_your_attendance_nclick_here"
                            android:textSize="18sp"
                            android:visibility="invisible"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:background="@drawable/button_background"
                android:letterSpacing="0.16"
                android:text="@string/setting"
                app:layout_constraintTop_toBottomOf="@id/cardview" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:background="@drawable/button_background"
                android:letterSpacing="0.16"
                android:text="@string/sign_out"
                app:layout_constraintTop_toBottomOf="@id/btn_setting"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>