<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_auth"
    app:startDestination="@id/splashScreenFragment">

    <fragment
        android:id="@+id/appPinFragment"
        android:name="com.example.guniattendance.authorization.authfragments.ui.apppin.AppPinFragment"
        android:label="Pin">
        <argument
            android:name="role"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.guniattendance.authorization.authfragments.ui.login.LoginFragment"
        android:label="@string/login" >
        <action
            android:id="@+id/action_loginFragment_to_studentRegisterFragment"
            app:destination="@id/studentRegisterFragment" />
    </fragment>
    <fragment
        android:id="@+id/launcherScreenFragment"
        android:name="com.example.guniattendance.authorization.authfragments.ui.launcherscreen.LauncherScreenFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_launcherScreenFragment_to_studentRegisterFragment"
            app:destination="@id/studentRegisterFragment" />
        <action
            android:id="@+id/action_launcherScreenFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_launcherScreenFragment_to_scannerFragment"
            app:destination="@id/scannerFragment" />
    </fragment>
    <fragment
        android:id="@+id/studentRegisterFragment"
        android:name="com.example.guniattendance.authorization.authfragments.ui.registerstudent.StudentRegisterFragment"
        android:label="@string/register">
        <action
            android:id="@+id/action_studentRegisterFragment_to_appPinFragment"
            app:destination="@id/appPinFragment" />
    </fragment>
    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="com.example.guniattendance.authorization.authfragments.ui.splashscreen.SplashScreenFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_splashScreenFragment_to_launcherScreenFragment"
            app:destination="@id/launcherScreenFragment" />
        <action
            android:id="@+id/action_splashScreenFragment_to_appPinFragment"
            app:destination="@id/appPinFragment" />
    </fragment>
    <fragment
        android:id="@+id/scannerFragment"
        android:name="com.example.guniattendance.student.studentfragments.ui.scanner.ScannerFragment"
        android:label="fragment_scanner"
        tools:layout="@layout/fragment_scanner" >
        <action
            android:id="@+id/action_scannerFragment_to_takeAttendanceFragment2"
            app:destination="@id/takeAttendanceFragment2" />
    </fragment>
    <fragment
        android:id="@+id/takeAttendanceFragment2"
        android:name="com.example.guniattendance.student.studentfragments.ui.takeattendance.TakeAttendanceFragment"
        android:label="TakeAttendanceFragment" >
        <action
            android:id="@+id/action_takeAttendanceFragment2_to_launcherScreenFragment"
            app:destination="@id/launcherScreenFragment" />
        <argument android:name="attendanceUid"
            app:argType="string" />
        <argument
            android:name="uid"
            app:argType="string" />
    </fragment>
</navigation>